--- a/tufte.css
+++ b/tufte.css
@@ -53,7 +53,6 @@ body {
     background-color: #fffff8;
     color: #111;
     max-width: 1400px;
-    counter-reset: sidenote-counter;
 }
 
 /* Adds dark mode */
@@ -274,48 +273,26 @@ a:link::-moz-selection {
 img {
     max-width: 100%;
 }
+sup {
+    font-size: 0.9rem;
+}
 
-.sidenote,
-.marginnote {
-    float: right;
-    clear: right;
-    margin-right: -60%;
-    width: 50%;
-    margin-top: 0.3rem;
+aside {
+    margin-left: 53%;
+    width: 24%;
+    margin-top: -3rem;
     margin-bottom: 0;
     font-size: 1.1rem;
     line-height: 1.3;
     vertical-align: baseline;
-    position: relative;
+    position: absolute;
 }
 
-.sidenote-number {
-    counter-increment: sidenote-counter;
+figure aside {
+    margin-top: 0;
 }
 
-.sidenote-number:after,
-.sidenote:before {
-    font-family: et-book-roman-old-style;
-    position: relative;
-    vertical-align: baseline;
-}
-
-.sidenote-number:after {
-    content: counter(sidenote-counter);
-    font-size: 1rem;
-    top: -0.5rem;
-    left: 0.1rem;
-}
-
-.sidenote:before {
-    content: counter(sidenote-counter) " ";
-    font-size: 1rem;
-    top: -0.5rem;
-}
-
-blockquote .sidenote,
-blockquote .marginnote {
-    margin-right: -82%;
+blockquote aside {
     min-width: 59%;
     text-align: left;
 }
@@ -352,8 +329,7 @@ h3 > code {
     font-size: 0.80em;
 }
 
-.marginnote > code,
-.sidenote > code {
+aside > code {
     font-size: 1rem;
 }
 
@@ -382,15 +358,6 @@ span.newthought {
 }
 
 input.margin-toggle {
-    display: none;
-}
-
-label.sidenote-number {
-    display: inline-block;
-    max-height: 2rem; /* should be less than or equal to paragraph line-height */
-}
-
-label.margin-toggle:not(.sidenote-number) {
     display: none;
 }
 
@@ -453,17 +420,11 @@ label.margin-toggle:not(.sidenote-number) {
         width: 100%;
     }
 
-    label.margin-toggle:not(.sidenote-number) {
-        display: inline;
-    }
-
-    .sidenote,
-    .marginnote {
+    aside {
         display: none;
     }
 
-    .margin-toggle:checked + .sidenote,
-    .margin-toggle:checked + .marginnote {
+    .margin-toggle:checked + aside {
         display: block;
         float: left;
         left: 1rem;
