Get margin notes to work on a phone

--- a/tufte.css
+++ b/tufte.css
@@ -435,7 +435,10 @@ figure iframe {
     }
 
     aside {
-        display: none;
+        margin-left: 40%;
+        width: 60%;
+        margin-top: 0;
+        position: relative;
     }
 
     .margin-toggle:checked + aside {
