--- a/tufte.css
+++ b/tufte.css
@@ -115,17 +115,22 @@ time {
 }
 
 article {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+
     padding: 5rem 0rem;
 }
 
 section {
     display: grid;
-    grid-template-columns: 2fr 1fr;
-
+    grid-template-columns: subgrid;
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
 
+article > * {
+    grid-column: 1 / 3;
+}
 section > * {
     grid-column: 1 / 2;
 }
