--- a/tufte.css
+++ b/tufte.css
@@ -79,7 +79,7 @@ h1 {
 h2 {
     font-style: italic;
     font-weight: 400;
-    margin-top: 2.1rem;
+    margin-top: 0;
     margin-bottom: 0;
     font-size: 2.2rem;
     line-height: 1;
@@ -89,8 +89,8 @@ h3 {
     font-style: italic;
     font-weight: 400;
     font-size: 1.7rem;
-    margin-top: 2rem;
-    margin-bottom: 1.4rem;
+    margin-top: 1rem;
+    margin-bottom: 0;
     line-height: 1;
 }
 
@@ -158,13 +158,13 @@ p {
 
 /* Epigraphs are blockquotes immediately after an h2 */
 blockquote > p {
-    margin-top: 3em;
+    margin-top: 2em;
     margin-bottom: 1em;
 }
 
 h2 + blockquote {
-    margin-top: 3.5em;
-    margin-bottom: 2em;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 h2 + blockquote,
@@ -182,6 +182,8 @@ h2 + blockquote > footer > cite {
 /* end chapter epigraphs styles */
 
 blockquote {
+    margin-top:0;
+    margin-bottom:0;
     font-size: 1.4rem;
 }
 
@@ -191,6 +193,7 @@ blockquote p {
 blockquote footer {
     font-size: 1.1rem;
     text-align: right;
+    margin-bottom: 2.6rem;
 }
 
 section > p,
@@ -216,7 +219,7 @@ figure {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
-    margin-bottom: 3em;
+    margin: 0 0 3em 0;
 }
 
 figcaption {
@@ -232,10 +235,12 @@ figcaption {
 
 /* fullwidth */
 article > figure {
+    grid-column: 1 / 3;
 }
 
 /* fullwidth */
 article > figure figcaption {
+    grid-column: 1 / 3;
 }
 
 /* Links: replicate underline that clears descenders */
@@ -277,16 +282,19 @@ a:link::-moz-selection {
 
 /* Sidenotes, margin notes, figures, captions */
 img {
+    max-width: 100%;
 }
 sup {
     font-size: 0.9rem;
 }
 
 p + ul, p + ol, p + dl {
+    margin-left: -1.65em;
 }
 
 aside, p + ul, p + ol, p + dl {
     grid-column: 2 / 3;
+    grid-row-end: span 3;
     margin-bottom: 0;
     font-size: 1.1rem;
     line-height: 1.3;
@@ -306,20 +314,14 @@ blockquote aside {
     text-align: left;
 }
 
-/* fullwidth */
-article > fullwidth,
-article > fullwidth {
-}
-
-xxtable {
-}
-
-article> table {
+article > table {
 }
 
 table {
     overflow-x: auto;
     font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif;
+    margin-left: auto;
+    margin-right: auto;
 }
 th, td {
     padding-top: 0.5rem;
@@ -374,12 +376,9 @@ aside > pre > code {
 
 /* fullwidth */
 article > fullwidth > code {
+    grid-column: 1 / 3;
 }
 
-/* fullwidth */
-article > figure {
-    clear:both;
-}
 
 section > p:first-child:first-line{
     font-variant: small-caps;
@@ -399,6 +398,7 @@ figure iframe {
     top: 0;
     left: 0;
     height: 100%;
+    width: 100%;
 }
 
 @media (max-width: 760px) {
