--- a/tufte.css
+++ b/tufte.css
@@ -117,10 +117,16 @@ time {
     font-family: et-book-roman-old-style;
 }
 
-article {
+body {
     display: grid;
     grid-template-columns: 64% 30%;
     column-gap: 6%;
+    row-gap: 1.4rem;
+}
+
+article {
+    display: grid;
+    grid-template-columns: subgrid;
     row-gap: 1.4rem;
 
     padding-top: 5rem;
@@ -133,6 +139,10 @@ section {
     row-gap: 1.4rem;
     padding-top: 2rem;
     padding-bottom: 1.4rem;
+}
+
+body > * {
+    grid-column: 1 / 3;
 }
 
 article > * {
