--- a/tufte.css
+++ b/tufte.css
@@ -123,8 +123,8 @@ time {
 
 article {
     display: grid;
-    grid-template-columns: 64% 30%;
-    column-gap: 4.75%;
+    grid-template-columns: 62.5% 30.25%;
+    column-gap: 6%;
     row-gap: 1.4rem;
 
     padding-top: 5rem;
@@ -142,8 +142,12 @@ section {
 article > * {
     grid-column: 1 / 3;
 }
+
 section > * {
     grid-column: 1 / 2;
+}
+section > h2 {
+    grid-column: 1 / 3;
 }
 
 p,
@@ -166,8 +170,14 @@ blockquote {
 
 /* Epigraphs are blockquotes immediately after an h2 */
 h2 + blockquote {
-    margin-top: 2em;
+    margin-right: 1rem;
+    margin-top: 0.9rem;
     margin-bottom: 1em;
+}
+
+h2 + blockquote p {
+    font-size: 1.4rem;
+    line-height: 2rem;
 }
 
 blockquote > footer {
@@ -190,7 +200,8 @@ blockquote p {
 }
 
 blockquote footer {
-    font-size: 1rem;
+    font-size: 1.1rem;
+    line-height: 1.3;
     text-align: right;
     margin-bottom: 2.6rem;
 }
